adding button for new squash

--- a/client/app-bundle/styles/squashlog.scss
+++ b/client/app-bundle/styles/squashlog.scss
@@ -35,6 +35,12 @@ div.feed-container {
   }
 }
 
+.add-squash{
+    zoom: 25%;
+    height: 2px;
+    width: 2px;
+  }
+
 .squash {
   @include outer-container();
 
