First steps of ux

--- a/client/app-bundle/styles/base/_base.scss
+++ b/client/app-bundle/styles/base/_base.scss
@@ -11,5 +11,7 @@
 @import "buttons";
 @import "forms";
 @import "lists";
+@import "layout";
+@import "squash";
 @import "tables";
 @import "typography";
