--- a/client/app-bundle/styles/bourbon/bourbon/addons/_buttons.scss
+++ b/client/app-bundle/styles/bourbon/bourbon/addons/_buttons.scss
@@ -51,6 +51,7 @@
 // scss-lint:disable StringQuotes
 
 $buttons-list: 'button',
+               'a.button',
                '[type="button"]',
                '[type="reset"]',
                '[type="submit"]';
