--- a/client/app-bundle/styles/app.scss
+++ b/client/app-bundle/styles/app.scss
@@ -1,13 +1,37 @@
 @import "bourbon/bourbon";
 @import "neat/neat";
 @import "base/base";
+@import "pretty-tags";
 
 $transparent-background-white: rgba(255,255,255,0.8);
 $lesstransparent-background-white: rgba(255,255,255,0.81);
 
 
 body {
-  background-image: url('http://previews.123rf.com/images/rtsubin/rtsubin1304/rtsubin130400006/18906935-Striped-gray-concrete-wall-background-texture-Stock-Photo.jpg');
+  // background: #492860 url("/stars_bg.png");
+  // background: hsla(275, 41%, 7%, 1) url("/stars_bg.png");
+  background: #92BE77;
+  margin: 0;
+  padding: 0;
+}
+
+.logo {
+  whitespace: no-wrap;
+  h1 {
+    color: #fefefe;
+    font-family: 'Fredoka One', cursive;
+    font-size: 4rem;
+    font-weight: normal;
+    span { text-decoration: underline; }
+  }
+
+  img {
+    height: 4rem;
+    float: left;
+    margin-right: 0.6rem;
+    position: relative; top: 0.7rem;
+    width: 4rem;
+  }
 }
 
 a {
@@ -17,13 +41,6 @@ a {
 
 div#app {
   height: 100%;
-}
-
-div.app {
-  @include outer-container;
-  height: 100%;
-  line-height: 22px;
-  text-align: center;
 }
 
 div.feed-container {
@@ -41,16 +58,6 @@ div.feed-container {
     height: 2px;
     width: 2px;
   }
-
-.squash {
-  @include outer-container();
-
-  .squash-content {
-    @include span-columns(8);
-    @include shift(2);
-    border-bottom: 1px solid grey;
-  }
-}
 
 .newSquash{
 
@@ -81,7 +88,7 @@ div.feed-container {
       resize: none;
       outline: none;
       box-shadow: 2px 2px 1px #95AF73;
-        
+
 
     }
 
@@ -94,24 +101,15 @@ div.feed-container {
     }
     button{
     @include span-columns(3 of 11);
-      
+
       margin-top: 20px;
       margin-right: 20px;
 
       color: #95AF73;
       outline: none;
-      width: 15em;  
+      width: 15em;
       height: 3em;
       top: 100%;
     }
   }
-}
-
-div.sign-in {
-  @include span-columns(1 of 6);
-  background-color: $transparent-background-white;
-  display: block;
-  font-size: 20px;
-  padding-bottom: 50px;
-  margin-top: 5em;
 }
