--- a/client/app-bundle/styles/base/_variables.scss
+++ b/client/app-bundle/styles/base/_variables.scss
@@ -3,7 +3,7 @@ $base-font-family: $helvetica;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
-$base-font-size: 1em;
+$base-font-size: 16px;
 
 // Line height
 $base-line-height: 1.5;
@@ -16,7 +16,7 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
-$blue: #477dca;
+$blue: #4C78D1;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
